change home page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>nagesh</title>
 </head>
 <body>
-    pesonal website coming soon
+    pesonal website coming soon 
+    this is myself
 </body>
 </html>
