--- a/index.html
+++ b/index.html
@@ -1,12 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nagesh</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+  <script src="app.js"></script>
+  <link rel="stylesheet" href="./assets/css/style.css">
+
+  <title> Home | NAGESH BABU</title>
 </head>
+
 <body>
-    pesonal website coming soon 
-    this is myself
+
+  <div class="columns fullheight-columns background-image">
+    <div class="column is-1">
+      <div class="hero is-fullheight">
+        <div class="hero-head p-4 has-text-white">
+          <i class="far fa-grin-beam is-size-3 "></i>
+        </div>
+        <div class="hero-body p-4">
+          <div class="tile is-vertical">
+            <div class="tile pb-4 pt-4 has-text-white">
+            </div>
+          </div>
+        </div>
+        <div class="hero-foot p-4 has-text-white">
+          <i class="fab fa-twitter is-size-3"></i>
+
+        </div>
+      </div>
+
+    </div>
+    <div class="column is-11">
+      <div class="hero is-fullheight">
+        <div class="hero-head ">
+          <nav class="navbar ">
+            <div class="navbar-menu ">
+              <div class="navbar-end text-is dark mt-4 pt-4">
+                <ul >
+                  <li >
+                    <a class="has-text-white is-size-4 ml-4 p-3" href="index.html ">HOME</a>
+
+                    <a class="has-text-white is-size-4 ml-4 p-3" href="work.html">WORK</a>
+
+                    <a class="has-text-white is-size-4 ml-4 p-3" href="about.html">ABOUT</a>
+
+                    <a class="has-text-white is-size-4 ml-4 p-3" href="contact.html">CONTACT</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </div>
+        <div class="hero-body">
+          <div class="column is-2">
+            <figure class="image is-200x200">
+              <img class="is-rounded" src="./profile.jpeg">
+            </figure>
+          </div>
+          <div class="level full-width has-text-white">
+            <div class="level-left">
+              <div class="level-item ">
+                <div>
+
+                  <p class="is-size-2">
+                    Hi there,
+                  </p>
+                  <p class="is-size-2" id="test">
+                    I Am Nagesh,
+                  </p>
+                  <p class="is-size-2">
+                    A Web developer
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="level-right">
+
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
+
 </html>
