--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
 </head>
 
 <body>
+  <div class="preloader">
+    <img src="assets/css/356.gif"  alt="preloader" class="preloader__item">
+  </div>
 
   <div class="columns fullheight-columns background-image">
+    <div class="preloader">
+      <img src="assets/css/356.gif"  alt="preloader" class="preloader__item">
+    </div>
     <div class="column is-1">
       <div class="hero is-fullheight">
         <div class="hero-head p-4 has-text-white">
@@ -38,7 +44,7 @@
         <div class="hero-head ">
           <nav class="navbar ">
             <div class="navbar-menu ">
-              <div class="navbar-end text-is dark mt-4 pt-4">
+              <div class="navbar-end has-text-warning-dark	 mt-4 pt-4">
                 <ul>
                   <li>
                     <a class="has-text-white is-size-4 ml-4 p-3" href="index.html ">HOME</a>
