--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-  
+
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <script src="app.js"></script>
   <link rel="stylesheet" href="./assets/css/style.css">
 
   <title> Home | NAGESH BABU</title>
 </head>
+
 <body>
   <div class="columns fullheight-columns background-image">
     <div class="column is-1">
@@ -22,6 +23,17 @@
         <div class="hero-body p-4">
           <div class="tile is-vertical">
             <div class="tile pb-4 pt-4 has-text-white">
+              <ul>
+                <li>
+                  <a class="has-text-white is-size-4 ml-4 mt-4 p-3" href="index.html ">HOME</a>
+
+                  <a class="has-text-white is-size-4 ml-4 mt-4p-3" href="work.html">WORK</a>
+
+                  <a class="has-text-white is-size-4 ml-4 mt-4p-3" href="about.html">ABOUT</a>
+
+                  <a class="has-text-white is-size-4 ml-4 mt-4 p-3" href="contact.html">CONTACT</a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -38,25 +50,15 @@
           <nav class="navbar ">
             <div class="navbar-menu ">
               <div class="navbar-end has-text-warning-dark	 mt-4 pt-4">
-                <ul>
-                  <li>
-                    <a class="has-text-white is-size-4 ml-4 p-3" href="index.html ">HOME</a>
-
-                    <a class="has-text-white is-size-4 ml-4 p-3" href="work.html">WORK</a>
-
-                    <a class="has-text-white is-size-4 ml-4 p-3" href="about.html">ABOUT</a>
-
-                    <a class="has-text-white is-size-4 ml-4 p-3" href="contact.html">CONTACT</a>
-                  </li>
-                </ul>
+                
               </div>
             </div>
           </nav>
         </div>
         <div class="hero-body">
-          <div class="column is-2">
+          <div class="image column is-2">
             <figure class="image is-200x200">
-              <img class="is-rounded" src="./profile.jpeg">
+              <img class="is-rounded" src="assets/css/profile.jpeg">
             </figure>
           </div>
           <div class="level full-width has-text-white">
@@ -86,8 +88,5 @@
     </div>
   </div>
 </body>
+
 </html>
-
-
-    
-
