--- a/index.html
+++ b/index.html
@@ -17,19 +17,28 @@
   <div class="columns fullheight-columns background-image">
     <div class="column is-1">
       <div class="hero is-fullheight">
-        <div class="hero-head p-4 has-text-white">
-          <i class="far fa-grin-beam is-size-3 "></i>
+        <div class="hero-head  mt-4 p-4 has-text-white">
+          <i class="ml-4 mt -4 far fa-grin-beam is-size-3 "></i>
+          <span style="color: aqua; font-size: 18px;">
+            Welcome....
+          </span>
         </div>
         <div class="hero-body p-4">
           <div class="tile is-vertical">
-            <div class="tile pb-4 pt-4 has-text-white">
+            <div class="tile pb-4  pt-4 has-text-white">
               <ul>
                 <li>
                   <a class="has-text-white is-size-4 ml-4 mt-4 p-3" href="index.html ">HOME</a>
+                  <br>
+                  <br>
 
-                  <a class="has-text-white is-size-4 ml-4 mt-4p-3" href="work.html">WORK</a>
+                  <a class="has-text-white is-size-4 ml-4 mt-4 p-3" href="work.html">WORK</a>
+                  <br>
+                  <br>
 
-                  <a class="has-text-white is-size-4 ml-4 mt-4p-3" href="about.html">ABOUT</a>
+                  <a class="has-text-white is-size-4 ml-4 mt-4 p-3" href="about.html">ABOUT</a>
+                  <br>
+                  <br>
 
                   <a class="has-text-white is-size-4 ml-4 mt-4 p-3" href="contact.html">CONTACT</a>
                 </li>
@@ -38,55 +47,38 @@
           </div>
         </div>
         <div class="hero-foot p-4 has-text-white">
-          <i class="fab fa-twitter is-size-3"></i>
+          <i class="ml-4 mt-9 md-4 fab fa-twitter is-size-3"></i>
 
         </div>
       </div>
-
     </div>
     <div class="column is-11">
-      <div class="hero is-fullheight">
-        <div class="hero-head ">
-          <nav class="navbar ">
-            <div class="navbar-menu ">
-              <div class="navbar-end has-text-warning-dark	 mt-4 pt-4">
-                
-              </div>
-            </div>
-          </nav>
-        </div>
-        <div class="hero-body">
-          <div class="image column is-2">
-            <figure class="image is-200x200">
+      <div class="phone">
+        <div class="hero-body columns">
+          <div class="column is-1">
+          </div>
+          <div class="image1 column is-2">
+            <figure class="image is-400x400">
               <img class="is-rounded" src="assets/css/profile.jpeg">
             </figure>
           </div>
-          <div class="level full-width has-text-white">
-            <div class="level-left">
-              <div class="level-item ">
-                <div>
-
-                  <p class="is-size-2">
-                    Hi there,
-                  </p>
-                  <p class="is-size-2" id="test">
-                    I Am Nagesh,
-                  </p>
-                  <p class="is-size-2">
-                    A Web developer
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="level-right">
-
+          <div class="level has-text-white column is-3 ">
+            <div class="text">
+              <p class="is-size-2">
+                Hi there,
+              </p>
+              <p class="is-size-2" id="test">
+                I Am Nagesh,
+              </p>
+              <p class="is-size-2">
+                A Web developer
+              </p>
             </div>
           </div>
-
         </div>
       </div>
     </div>
   </div>
 </body>
-
 </html>
+  
